--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -3,10 +3,9 @@
     <h1 class="nav-nook">BookNook.</h1>
   </div>
   <div class="nav-right">
-    <!--does this need to be unordered list?-->
-    <a href="/chat/chat.html"><img
-        class="chat"
-        src="/assets/images/chat.png"
+    <a href="/home/home.html"><img
+        class="home"
+        src="/assets/images/home.png"
       /></a>
     <a href="/wishlist/wishlist.html"><img
         class="wish-list"
