--- a/views/shop.handlebars
+++ b/views/shop.handlebars
@@ -1,9 +1,12 @@
 <div class="welcome">
   <div class="welcome-heading">
     <h1 class="story-starts">Shop the BookNook Library.</h1>
-    <div class="search">
-      <input type="text" placeholder="Search BookNook..." class="search-bar" />
-    </div>
+    <form class="search-form">
+      <input type="text" placeholder="Search Library..." class="search-bar" />
+      <button type="submit" class="submit-button">
+        <img src="/public/assets/images/search.png" class="search-img" />
+      </button>
+    </form>
   </div>
 </div>
 <!--shop end-->
