--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,11 +2,13 @@
       <div class="welcome-heading">
         <h1 class="story-starts">Your story starts here.</h1>
         <div class="sign-up">
-          <button class="sign-up-button">Sign Up</button>
+          <button class="log-button">Log In</button>
+          <button class="sign-up-button">Sign-Up</button>
         </div>
       </div>
     </div>
-
+    <!--welcome banner end-->
+    <!--what we do start-->
     <div class="what-we-do">
       <div class="what-we-do-heading">
         <h2 class="what-title">About BookNook.</h2>
@@ -15,24 +17,24 @@
     <div class="what-we-do-2">
       <div class="what-we-do-para">
         <p class="para">
-          BookNook is a book-sharing platform that allows users to swap, buy and
-          sell their pre-loved books. Our mission is to spread the love of
-          reading across the world, whilst maintaining an environmentally
-          friendly approach. Sustainability is at the heart of everything we do.
-          There are how many trees per day cut down. little fact here.
+          BookNook is a book-sharing platform that allows users to browse,
+          research and save their favourite books. Our mission is to spread the
+          love of reading across the world, whilst maintaining an
+          environmentally friendly approach.
         </p>
       </div>
     </div>
-
+    <!--what we do end-->
+    <!--grid start-->
     <div class="grid-container">
       <div class="shop-grid">
-        <h2 class="shop-heading">Shop & Swap</h2>
-        <p class="shop-para">Buy, sell, and swap your used books.</p>
+        <h2 class="shop-heading">Shop</h2>
+        <p class="shop-para">Browse, save and order books.</p>
       </div>
       <div class="connect-grid">
         <h2 class="connect-heading">Connect</h2>
         <p class="connect-para">
-          Join our BookNook community, post book reviews and WHAT?
+          Join our BookNook community and comment on the books you love.
         </p>
       </div>
       <div class="bag-grid">
@@ -44,12 +46,13 @@
       <div class="wishlist-grid">
         <h2 class="wish-heading">Wish List</h2>
         <p class="wish-para">
-          Create a wish list, so you never forget which books you want in
-          future.
+          Create a wish list, so you never forget which books you would like to
+          buy in the future.
         </p>
       </div>
     </div>
-
+    <!--grid end-->
+    <!--sustain start-->
     <div class="quote-heading">
       <h1 class="quote-line">
         "BookNook lets me connect with friends. It's like having an online book
@@ -65,3 +68,4 @@
         </div>
       </div>
     </div>
+    <!--sustain end-->
